--- a/index.html
+++ b/index.html
@@ -3,8 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Simon Game</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="ss_game.css">
 </head>
 <body>
+    <div class="row container">
+        <div class="col-3">
+            <div id="red" class="bg-danger fluid"></div>
+            <div id="blue" class="bg-primary fluid"></div>
+        </div>
+        <div class="col-3">
+            <div id="yellow" class="bg-warning"></div>
+            <div id="green" class="bg-success"></div>
+        </div>
+    </div>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 </body>
 </html>
