modified the layout, size, & shape of divs to reflect the simon game general look

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="row container">
         <div class="col-3">
-            <div id="red" class="bg-danger fluid"></div>
-            <div id="blue" class="bg-primary fluid"></div>
+            <div id="red" class="bg-danger fluid layout"></div>
+            <div id="blue" class="bg-primary fluid layout"></div>
         </div>
         <div class="col-3">
-            <div id="yellow" class="bg-warning"></div>
-            <div id="green" class="bg-success"></div>
+            <div id="yellow" class="bg-warning layout"></div>
+            <div id="green" class="bg-success layout"></div>
         </div>
     </div>
 
