More formatting - round circles & spacing

--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="ss_game.css">
 </head>
 <body>
-    <div class="row container">
-        <div class="col-3">
-            <div id="red" class="bg-danger fluid layout"></div>
-            <div id="blue" class="bg-primary fluid layout"></div>
+    <h3>Play Simon Says!</h3>
+    <div id="Big-Square" class="row container">
+        <div class="col-4">
+            <div id="red" class="bg-danger layout"></div>
+            <div id="blue" class="bg-primary layout"></div>
         </div>
-        <div class="col-3">
+        <div class="col-4">
             <div id="yellow" class="bg-warning layout"></div>
             <div id="green" class="bg-success layout"></div>
         </div>
