final color & shape formatting to get a circle

--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
     <link rel="stylesheet" href="ss_game.css">
 </head>
 <body>
-    <h3>Play Simon Says!</h3>
-    <div id="Big-Square" class="row container">
-        <div class="col-4">
-            <div id="red" class="bg-danger layout"></div>
-            <div id="blue" class="bg-primary layout"></div>
-        </div>
-        <div class="col-4">
-            <div id="yellow" class="bg-warning layout"></div>
-            <div id="green" class="bg-success layout"></div>
-        </div>
-    </div>
+
+        <h3>Let's play Simon Says!</h3>
+            <div class="container">
+                    <div id="red" class="bg-danger layout"></div>
+                    <div id="blue" class="bg-primary layout"></div>
+                    <div id="yellow" class="bg-warning layout"></div>
+                    <div id="green" class="bg-success layout"></div>
+            </div>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
