--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Simple Simon Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="ss_game.css">
+
 </head>
 <body>
 
@@ -19,5 +20,6 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+    <script src="game.js"></script>
 </body>
 </html>
