final corrections to simon says game. Added counter and button to start the game.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-        <h3>Let's play Simon Says!</h3>
+        <h3>Let's play Simon Says!</h3><br>
+        <div><button type="button" id="start" class="btn btn-danger">Start</button></div><br>
+        <div id="round" class="bg-primary width"></div><br>
             <div class="container">
                     <div id="red" class="bg-danger layout"></div>
                     <div id="blue" class="bg-primary layout"></div>
