Got the logic correct for counting rounds, creating the correct arrays and working on the final look

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
 
 </head>
 <body>
-
+    <div class="container mt-3">
         <h3>Let's play Simon Says!</h3><br>
         <div><button type="button" id="start" class="btn btn-danger">Start</button></div><br>
-        <div id="round" class="bg-primary width"></div><br>
+
             <div class="container">
                     <div id="red" class="bg-danger layout"></div>
                     <div id="blue" class="bg-primary layout"></div>
                     <div id="yellow" class="bg-warning layout"></div>
                     <div id="green" class="bg-success layout"></div>
             </div>
-
+        <div id="round" class="width btn text-center bg-primary"></div><br>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
