--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
             <div class="container">
                     <div id="red" class="bg-danger layout"></div>
                     <div id="blue" class="bg-primary layout"></div>
-                    <div id="yellow" class="bg-warning layout"></div>
-                    <div id="green" class="bg-success layout"></div>
-            </div>
-        <div id="round" class="width btn text-center bg-primary"></div><br>
+                    <div id="yellow" class="bg-warning layout shadows"></div>
+                    <div id="green" class="bg-success layout shadows"></div>
+            </div><br>
+        <div id="round" class="width text-center bg-primary text-white">
+        </div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
